src/main/frontend/mobile/index.css
.action-bar {
  @apply fixed bottom-[100px] h-[70px] p-1.5 rounded-md overflow-y-hidden overflow-x-auto
  shadow-md bg-[var(--ls-secondary-background-color)] z-[100];

  .action-bar-commands {
    @apply relative flex w-full;


    .ti, .tie {
      @apply text-[var(--ls-primary-text-color)] text-[23px] opacity-75;
    }

    .description {
      @apply text-[var(--ls-primary-text-color)] text-[10px] opacity-75;
    }

    button {
        flex: 1;
        display: flex;
        flex-direction: column;   /* Stack icon and label */
        align-items: center;      /* Center horizontally */
        justify-content: center;  /* Center vertically */
        padding: 12px 4px;
    }
  }
}

#mobile-editor-toolbar {
  @apply fixed -bottom-1 left-0 w-full z-[9999] flex justify-between bg-gray-100 border-t border-gray-200;

  will-change: transform;
  transform: translateY(calc(-1 * var(--ls-native-kb-height, 0)));
  opacity: var(--ls-native-toolbar-opacity, 0);
  transition: transform 250ms ease-out, opacity 50ms ease-out;

  button {
    @apply flex items-center py-2 px-2 opacity-70 active:opacity-80;
  }

  .submenu {
    @apply fixed left-0 bottom-0 w-full flex-row justify-evenly items-center z-10 bg-base-2
    hidden overflow-x-auto overflow-y-hidden h-5 border;

    &.show-submenu {
      @apply flex;
    }
  }

  .toolbar-commands {
    @apply flex justify-between items-center w-[95%] overflow-y-hidden overflow-x-auto;

    &::-webkit-scrollbar {
      @apply h-1;
    }
  }

  .toolbar-hide-keyboard {
    @apply border-l border-gray-200;
  }
}

html.is-native-ipad {
  .action-bar {
    @apply w-[70%] min-w-[550px];

    @media (orientation: landscape) {
      @apply w-1/2;
    }
  }
}

html.is-native-iphone {
  .action-bar {
    left: 3%;
    right: 3%;
  }

  @media (orientation: landscape) {
    .cp__footer {
      height: 45px;
    }

    .action-bar {
      bottom: 50px;
      left: 15%;
      right: 15%;
      width: 70%;
      min-width: 450px;
    }
  }
}

html.is-native-iphone-without-notch,
html.is-native-android {
  .cp__footer {
    height: 45px;
  }

  .action-bar {
    left: 5%;
    right: 5%;
  }

  @media (orientation: landscape) {

    .action-bar {
      bottom: 50px;
      left: 15%;
      right: 15%;
      width: 70%;
    }
  }

  .cp__sidebar-left-layout {
    bottom: 0;
  }
}

html.is-zoomed-native-ios {
  .cp__footer {
    height: 70px;
  }

  @media (orientation: landscape) {
    .cp__footer {
      height: 50px;
    }
  }
}

.cp__graph-picker {
  button.toggle-item {
    opacity: .5;
    background: transparent !important;
    -webkit-tap-highlight-color: transparent;

    &:hover {
      color: inherit;
      opacity: .5;
    }

    &.is-on {
      @apply opacity-100;
    }
  }
}

